--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -223,6 +223,25 @@ jobs:
       config: interpolated-config
       state: config
       image: downloaded-product
+    ensure:
+      do:
+        - task: make-commit
+          image: platform-automation-image
+          file: platform-automation-tasks/tasks/make-git-commit.yml
+          input_mapping:
+            repository: config
+            file-source: generated-state
+          output_mapping:
+            repository-commit: config-commit
+          params:
+            FILE_SOURCE_PATH: state.yml
+            FILE_DESTINATION_PATH: state.yml
+            GIT_AUTHOR_NAME: "Platform Automation Bot"
+            COMMIT_MESSAGE: 'Update state file'
+        - put: config
+          params:
+            repository: config-commit
+            merge: true
 
 resource_types:
 - name: pivnet
