Required config to switch to s3 approach

--- a/config/download-ops-manager.yml
+++ b/config/download-ops-manager.yml
@@ -3,3 +3,8 @@ pivnet-api-token: ((pivnet-refresh-token))
 pivnet-file-glob: "ops-manager-vsphere*.ova"
 pivnet-product-slug: ops-manager
 product-version-regex: ^2\.5\.\d+$
+
+s3-access-key-id: ((minio_access_key))
+s3-secret-access-key: ((minio_secret_key))
+s3-bucket: ((minio_pivnet_products_bucket))
+s3-region-name: ((minio_region))
