--- a/ci/settings.yml
+++ b/ci/settings.yml
@@ -2,11 +2,13 @@ meta:
   repo_uri: ((git_repo_uri))
   git_tag: master
   git_private_key: ((gitlab_ssh.private_key))
-  ci_docker_image: pcfautomation/boshaas-automation-release-image
-  ci_docker_image_tag: edge
+  ci_docker_image: ((ci_docker_image))
+  ci_docker_image_tag: ((ci_docker_image_tag))
   testflight_vcenter_user: ((testflight_vcenter_user))
   testflight_vcenter_password: ((testflight_vcenter_password))
-  minio_ip: ((minio_ip))
+  minio_url: ((minio_url))
   minio_access_key: ((minio_access_key))
   minio_secret_key: ((minio_secret_key))
+  minio_region: ((minio_region))
+  minio_bucket_for_pivotal_product: ((minio_pivnet_products_bucket))
 
