--- a/config/env.yml
+++ b/config/env.yml
@@ -1,8 +1,8 @@
 ---
-username: ((opsman_api_username))
-password: ((opsman_api_password))
-decryption-passphrase: ((opsman_decryption_passphrase))
-target: https://10.0.0.30
+username: ((testflight_opsman_api_username))
+password: ((testflight_opsman_api_password))
+decryption-passphrase: ((testflight_opsman_decryption_passphrase))
+target: ((testflight_opsman_url))
 connect-timeout: 30            # default 5
 request-timeout: 1800          # default 1800
 skip-ssl-validation: true     # default false
