WIP first attempt with director config in YAML

--- a/ci/testflight-deployment/infra-settings.yml
+++ b/ci/testflight-deployment/infra-settings.yml
@@ -26,9 +26,11 @@ reserved_ip_ranges:
   - 10.0.0.45 - 10.0.0.49 # Based on CIDR /26 keep a load of IPs free for the target environments we want to rollout within the same network
   - 10.0.0.50 - 10.0.0.63 # Monitoring IPs
 
+pcf_opsman_director_config_reserved_ip_ranges: 10.0.0.2-10.0.0.29,10.0.0.40-10.0.0.63
+
 # Pivotal Platform Automation - config/opsman.yml
 opsman_ip: 10.0.0.30
-opsman_ntp: 0.de.pool.ntp.org
+infra_ntp: 0.de.pool.ntp.org
 testflight_opsman_hostname: pcf.testflight.dell-app.com
 testflight_opsman_vm_name: Ops_Manager_TestFlight
 vcenter_netmask: 255.255.255.0
