--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -121,6 +121,32 @@ jobs:
           params:
             repository: config-commit
             merge: true
+  - task: configure-authentication
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/configure-authentication.yml
+    params:
+      ENV_FILE: config/env.yml
+      AUTH_CONFIG_FILE: config/auth.yml
+    attempts: 10
+    input_mapping:
+      env: interpolated-config
+      config: interpolated-config
+  - task: configure-director
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/configure-director.yml
+    params:
+      ENV_FILE: config/env.yml
+      DIRECTOR_CONFIG_FILE: config/director-template.yml
+    input_mapping:
+      config: interpolated-config
+      env: interpolated-config
+  - task: apply-director-changes
+    image: platform-automation-image
+    file: platform-automation-tasks/tasks/apply-director-changes.yml
+    params:
+      ENV_FILE: config/env.yml
+    input_mapping:
+      env: interpolated-config
 
 
 - name: fetch-platform-automation
