--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -19,6 +19,70 @@ meta:
       repository: (( grab meta.ci_docker_image ))
       tag: (( grab meta.ci_docker_image_tag ))  
 
+interpolate-env-creds: &interpolate-env-creds
+  image: platform-automation-image
+  file: platform-automation-tasks/tasks/credhub-interpolate.yml
+  params:
+    CREDHUB_CLIENT: ((credhub_username))
+    CREDHUB_SECRET: ((credhub_password))
+    CREDHUB_SERVER: ((credhub_url))
+    CREDHUB_CA_CERT: ((credhub_ca_cert))
+    PREFIX: '/concourse/main'
+    INTERPOLATION_PATHS: config
+    SKIP_MISSING: true
+  input_mapping:
+    files: config
+  output_mapping:
+    interpolated-files: interpolated-config
+
+check-interpolated-config: &check-interpolated-config
+  config:
+    platform: linux
+    image_resource: (( grab meta.task_image ))
+    inputs:
+    - name: interpolated-config
+    run:
+      path: sh
+      args:
+      - -ec
+      - |
+        cat interpolated-config/config/*
+
+check-s3: &check-s3
+  config:
+    platform: linux
+    image_resource: (( grab meta.task_image ))
+    params:
+      MINIO_ACCESS_KEY: (( grab meta.minio_access_key ))
+      MINIO_SECRET_KEY: (( grab meta.minio_secret_key ))
+      MINIO_URL: (( grab meta.minio_url ))
+    run:
+      path: sh
+      args:
+      - -ec
+      - |
+        : "${MINIO_URL:? MINIO_URL must be set }"
+        : "${MINIO_ACCESS_KEY:? MINIO_ACCESS_KEY must be set }"
+        : "${MINIO_SECRET_KEY:? MINIO_SECRET_KEY must be set }"
+
+        set -eu
+        mc config host add minio ${MINIO_URL} ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY}
+        mc --debug ls minio
+
+check-pivnet: &check-pivnet
+  config:
+    platform: linux
+    image_resource: (( grab meta.task_image ))
+    params:
+      PIVNET_TOKEN: "((pivnet-refresh-token))"
+    run:
+      path: sh
+      args:
+      - -ec
+      - |
+        set -eu
+        curl -f -i -H "Accept: application/json" -H "Content-Type: application/json" -H "Authorization: Token $PIVNET_TOKEN" -X GET https://network.pivotal.io/api/v2/authentication
+
 groups:
 - name: pivnet-downloads
   jobs:
@@ -58,20 +122,9 @@ jobs:
       run:
         path: ci-tasks/ci/tasks/check-vcenter-connectivity.sh
   - task: interpolate-env-creds
-    image: platform-automation-image
-    file: platform-automation-tasks/tasks/credhub-interpolate.yml
-    params:
-      CREDHUB_CLIENT: ((credhub_username))
-      CREDHUB_SECRET: ((credhub_password))
-      CREDHUB_SERVER: ((credhub_url))
-      CREDHUB_CA_CERT: ((credhub_ca_cert))
-      PREFIX: '/concourse/main'
-      INTERPOLATION_PATHS: config
-      SKIP_MISSING: true
-    input_mapping:
-      files: config
-    output_mapping:
-      interpolated-files: interpolated-config
+    <<: *interpolate-env-creds
+  - task: check-interpolated-config
+    <<: *check-interpolated-config
   - task: remove-testflight-opsman-if-exists
     config:
       platform: linux
@@ -157,19 +210,8 @@ jobs:
   - get: platform-automation-pivnet
     trigger: true
   - task: check-pivotal-platform-automation-prerequisites------pivnet
-    config:
-      platform: linux
-      image_resource: (( grab meta.task_image ))
-      params:
-        PIVNET_TOKEN: "((pivnet-refresh-token))"
-      run:
-        path: sh
-        args:
-        - -ec
-        - |
-          set -eu
-          curl -f -i -H "Accept: application/json" -H "Content-Type: application/json" -H "Authorization: Token $PIVNET_TOKEN" -X GET https://network.pivotal.io/api/v2/authentication
-  - task: check-pivotal-platform-automation-prerequisites------s3
+    <<: *check-pivnet
+  - task: check-pivotal-platform-automation-prerequisites-and-ensure-bucket-created------s3
     config:
       platform: linux
       image_resource: (( grab meta.task_image ))
@@ -205,8 +247,8 @@ jobs:
   serial: true
   plan:
   - aggregate:
-    #- get: daily
-    #  trigger: true
+    - get: daily
+      trigger: true
     - get: platform-automation-image
       params:
         unpack: true
@@ -214,21 +256,12 @@ jobs:
       params:
         unpack: true
     - get: config
+  - task: check-prerequisites------pivnet
+    <<: *check-pivnet
+  - task: check-prerequisites------s3
+    <<: *check-s3
   - task: interpolate-env-creds
-    image: platform-automation-image
-    file: platform-automation-tasks/tasks/credhub-interpolate.yml
-    params:
-      CREDHUB_CLIENT: ((credhub_username))
-      CREDHUB_SECRET: ((credhub_password))
-      CREDHUB_SERVER: ((credhub_url))
-      CREDHUB_CA_CERT: ((credhub_ca_cert))
-      PREFIX: '/concourse/main'
-      INTERPOLATION_PATHS: config
-      SKIP_MISSING: true
-    input_mapping:
-      files: config
-    output_mapping:
-      interpolated-files: interpolated-config
+    <<: *interpolate-env-creds
   - task: download-product-small-footprint-ert
     image: platform-automation-image
     file: platform-automation-tasks/tasks/download-product.yml
@@ -241,14 +274,12 @@ jobs:
       params:
         file: downloaded-product/*
 
-
-
 - name: fetch-opsman
   serial: true
   plan:
   - aggregate:
-    #- get: daily
-    #  trigger: true
+    - get: daily
+      trigger: true
     - get: platform-automation-image
       params:
         unpack: true
@@ -256,68 +287,14 @@ jobs:
       params:
         unpack: true
     - get: config
-  - task: check-opsman-via-s3-prerequisites------s3
-    config:
-      platform: linux
-      image_resource: (( grab meta.task_image ))
-      params:
-        MINIO_ACCESS_KEY: (( grab meta.minio_access_key ))
-        MINIO_SECRET_KEY: (( grab meta.minio_secret_key ))
-        MINIO_URL: (( grab meta.minio_url ))
-      run:
-        path: sh
-        args:
-        - -ec
-        - |
-          : "${MINIO_URL:? MINIO_URL must be set }"
-          : "${MINIO_ACCESS_KEY:? MINIO_ACCESS_KEY must be set }"
-          : "${MINIO_SECRET_KEY:? MINIO_SECRET_KEY must be set }"
-
-          set -eu
-          mc config host add minio ${MINIO_URL} ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY}
-          mc --debug ls minio
-  - task: check-task-yml
-    config:
-      platform: linux
-      image_resource: (( grab meta.task_image ))
-      inputs:
-      - name: platform-automation-tasks
-      run:
-        path: sh
-        args:
-        - -ec
-        - |
-          cat platform-automation-tasks/tasks/download-product.yml
-          cat platform-automation-tasks/tasks/download-product.sh
-          cat platform-automation-tasks/tasks/download-product-s3.yml
-          cat platform-automation-tasks/tasks/download-product-s3.sh
+  - task: check-prerequisites------pivnet
+    <<: *check-pivnet
+  - task: check-prerequisites------s3
+    <<: *check-s3
   - task: interpolate-env-creds
-    image: platform-automation-image
-    file: platform-automation-tasks/tasks/credhub-interpolate.yml
-    params:
-      CREDHUB_CLIENT: ((credhub_username))
-      CREDHUB_SECRET: ((credhub_password))
-      CREDHUB_SERVER: ((credhub_url))
-      CREDHUB_CA_CERT: ((credhub_ca_cert))
-      PREFIX: '/concourse/main'
-      INTERPOLATION_PATHS: config
-      SKIP_MISSING: true
-    input_mapping:
-      files: config
-    output_mapping:
-      interpolated-files: interpolated-config
+    <<: *interpolate-env-creds
   - task: check-interpolated-config
-    config:
-      platform: linux
-      image_resource: (( grab meta.task_image ))
-      inputs:
-      - name: interpolated-config
-      run:
-        path: sh
-        args:
-        - -ec
-        - |
-          cat interpolated-config/config/*
+    <<: *check-interpolated-config
   - task: download-product-opsman
     image: platform-automation-image
     file: platform-automation-tasks/tasks/download-product.yml
@@ -397,7 +374,7 @@ resources:
     secret_access_key: (( grab meta.minio_secret_key ))
     regexp: platform-automation-image-(.*).tgz
 
-#- name: daily
-#  type: time
-#  source:
-#    interval: 24h
+- name: daily
+  type: time
+  source:
+    interval: 24h
